[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/TypingBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/MainGame.gd" type="Script" id=2]

[node name="MainGame" instance=ExtResource( 1 )]
script = ExtResource( 2 )
typeList = [ "Hello there", "World", "test", "more test", "one two three", "four five six", "seven eight nine", "ten eleven twelve" ]

[node name="Pos0" type="Position2D" parent="." index="0"]
position = Vector2( 8, 214 )

[node name="Pos1" type="Position2D" parent="." index="1"]
position = Vector2( 358, 210 )

[node name="Pos2" type="Position2D" parent="." index="2"]
position = Vector2( 649, 215 )
